# shopee-tracker

./: .gitignore  README.md  pyproject.toml
core/: Enums.py  Flow.py  Models.py  Scraping.py  Setup.py  ShopeeTracker.session  ShopeeTracker.session-journal  Telegram.py  UserModel.py
core/config/: database.py  driver.py
core/db/: shopeetracker.db
core/flow/: DriverSetUp.py  Flow.py
core/integrations/telegram/: Telegram.py  TelegramRequests.py
core/models/: User.py  models.py
core/scripts/: scraping.py
core/tests/: ScrapingTest.py
